fix: organization mobile td margin

--- a/src/styles/prototypes/dashboard/layout.css
+++ b/src/styles/prototypes/dashboard/layout.css
@@ -249,7 +249,7 @@ table.org-details {
     }
 
     & td + td {
-      padding-top: 0.4rem;
+      margin-top: 0.75rem;
     }
   }
 }
@@ -293,7 +293,7 @@ table.account-details td:last-child {
 }
 
 .account-name-field {
-  margin: 0 0 0.5rem;
+  margin: 0 0 0.75rem;
   max-width: 16rem;
 }
 
@@ -301,7 +301,7 @@ table.account-details td:last-child {
   display: flex;
   flex-direction: column;
   gap: 0.4rem;
-  margin-bottom: 0.4rem;
+  margin-bottom: 0.75rem;
   max-width: 16rem;
 
   & .m__textfield {
